--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,9 @@ jobs:
 
       - name: Build step
         run: "deno task build"
+        env:
+          GOOGLE_CLIENT_ID: skip
+          GOOGLE_CLIENT_SECRET: skip
 
       - name: Upload to Deno Deploy
         uses: denoland/deployctl@v1
