--- a/deno.json
+++ b/deno.json
@@ -22,12 +22,12 @@
   ],
   "imports": {
     "$fresh/": "https://deno.land/x/fresh@1.6.8/",
-    "preact": "https://esm.sh/preact@10.19.6",
-    "preact/": "https://esm.sh/preact@10.19.6/",
+    "$std/": "https://deno.land/std@0.216.0/",
+    "@deno/kv-oauth": "jsr:@deno/kv-oauth@^0.11.0",
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
-    "$std/": "https://deno.land/std@0.216.0/",
-    "$deno_kv_oauth/": "https://deno.land/x/deno_kv_oauth@v0.10.0/"
+    "preact": "https://esm.sh/preact@10.19.6",
+    "preact/": "https://esm.sh/preact@10.19.6/"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
